# desenvolvimento_fullstack_com_django

./: build.sh  pyproject.toml
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html
contacts/: urls.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: create.html  name.html
mysite/: admin.py  settings.py  urls.py
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
polls/templates/polls/: detail.html  index.html
templates/admin/: base.html
testes/contacts/: test_form.py  test_views.py
testes/polls/: test_models.py
