[tool.poetry]
name = "desenvolvimento-fullstack-com-django"
version = "0.1.0"
description = ""
authors = ["FabioPortella <fabioportella2009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "*"


[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
