[tool.poetry]
name = "desenvolvimento-fullstack-com-django"
version = "0.1.0"
description = ""
authors = ["FabioPortella <fabioportella2009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "*"
dj-database-url = "*"
psycopg2-binary = "*"
whitenoise = {version = "*", extras = ["brotli"]}
gunicorn = "*"


[tool.poetry.group.dev.dependencies]
ipython = "*"
pytest-django = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
